<resources>
    <string name="app_name" translatable="false">MECA-Composants</string>
    <string name="app_description">An application description</string>
    <!-- text displayed -->
    <string name="cancel_text">Cancel</string>
    <string name="validate_text">Validate</string>
    <string name="back_text">Back</string>
    <string name="add_representation_text">Add representation</string>
    <string name="add_signal_type_text">Add signal type</string>
    <string name="delete_text">Delete</string>
    <string name="modify_text">Modify</string>
    <string name="details_gear_title">Gear details</string>
    <string name="add_gear_title">Add a new gear</string>
    <string name="add_signal_type_title">Add a new signal type</string>
    <string name="modify_gear_title">Modify a gear</string>
    <!-- message displayed -->
    <string name="gear_creation_message">Gear created</string>
    <string name="gear_creation_failed_message">Gear creation failed</string>
    <string name="gear_list_update_message">Gear list updated</string>
    <string name="gear_delete_message">Gear deleted</string>
    <string name="gear_nbrWire_invalid_message">Number of wires must be between 0 and 127</string>
    <string name="gear_update_message">Gear updated</string>
    <!-- string of "Gear" JAVA object -->
    <string name="gear_denomination">Denomination</string>
    <string name="gear_representation">Representation</string>
    <string name="gear_gearSensorType">Type</string>
    <string name="gear_basicWorking">Basic working</string>
    <string name="gear_role">Role</string>
    <string name="gear_nbrWire">Number of wire</string>
    <string name="gear_tests" translatable="false">Tests</string>
    <string name="gear_signalType">Signal type</string>
    <string name="gear_gearCategory">Sensor/Actuator</string>
    <string name="gear_note" translatable="false">Note</string>
    <string name="gear_composition" translatable="false">Composition</string>
    <!-- string of "SignalType" JAVA object -->
    <string name="signal_type_name">Signal name</string>
    <string name="signal_type_picture">Signal picture</string>
</resources>