<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddSignalTypeActivity">

    <TextView
        android:id="@+id/tv_title"
        style="@style/text_view_title"
        android:text="@string/add_signal_type_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TableLayout
        android:id="@+id/tl_add_new_signal_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="vertical"
        android:shrinkColumns="*"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <TextView
                style="@style/text_view"
                android:layout_height="match_parent"
                android:text="@string/signal_type_name" />

            <EditText
                android:id="@+id/et_signal_type_name"
                style="@style/edit_text"
                android:layout_height="wrap_content"
                android:autofillHints="name"
                android:hint="@string/signal_type_name" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <TextView
                style="@style/text_view"
                android:layout_height="match_parent"
                android:text="@string/signal_type_picture" />

            <ImageView
                android:id="@+id/iv_signal_type_picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:src="@drawable/add_a_photo" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_cancel"
                style="@style/btn_cancel"
                android:layout_height="wrap_content"
                android:text="@string/cancel_text" />

            <Button
                android:id="@+id/btn_validate"
                style="@style/btn_validate"
                android:layout_height="wrap_content"
                android:text="@string/validate_text" />
        </TableRow>

    </TableLayout>

</LinearLayout>