<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailsGearActivity">

    <TextView
        android:id="@+id/tv_title"
        style="@style/text_view_title"
        android:text="@string/details_gear_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableLayout
            android:id="@+id/tl_details_gear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="vertical"
            android:shrinkColumns="*"
            android:stretchColumns="*">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btn_add_representation"
                    style="@style/btn_option"
                    android:layout_height="wrap_content"
                    android:text="@string/add_representation_text" />

                <Button
                    android:id="@+id/btn_add_signalType"
                    style="@style/btn_option"
                    android:layout_height="wrap_content"
                    android:text="@string/add_signal_type_text" />
            </TableRow>

        </TableLayout>
    </ScrollView>
</LinearLayout>
